// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateColorMatrix return correct output 1`] = `
Array [
  Array [
    Object {
      "color": Array [
        0,
        80,
        10,
      ],
      "position": Array [
        20,
        20,
      ],
    },
    Object {
      "color": Array [
        0,
        80,
        90,
      ],
      "position": Array [
        20,
        70,
      ],
    },
  ],
  Array [
    Object {
      "color": Array [
        320,
        80,
        10,
      ],
      "position": Array [
        70,
        20,
      ],
    },
    Object {
      "color": Array [
        320,
        80,
        90,
      ],
      "position": Array [
        70,
        70,
      ],
    },
  ],
]
`;

exports[`getBlockColor return correct color tuple 1`] = `
Array [
  1,
  2,
  3,
]
`;

exports[`isEqual should return false when two tuples are different 1`] = `false`;

exports[`isEqual should return true when two tuples are the same 1`] = `true`;

exports[`stringToPosition return correct output 1`] = `
Array [
  2,
  6,
]
`;

exports[`stringToPosition return correct output 2`] = `
Array [
  -1,
  -1,
]
`;

exports[`stringToPosition return correct output 3`] = `
Array [
  6,
  3,
]
`;

exports[`stringToPosition return correct output 4`] = `
Array [
  -1,
  -1,
]
`;

exports[`swapBlock return correct board after swapping 1`] = `
Array [
  Array [
    Object {
      "color": Array [
        4,
        5,
        6,
      ],
      "position": Array [
        1,
        1,
      ],
    },
  ],
  Array [
    Object {
      "color": Array [
        1,
        2,
        3,
      ],
      "position": Array [
        1,
        1,
      ],
    },
  ],
]
`;

exports[`swapBlock return correct board if passing invalid position 1`] = `
Array [
  Array [
    Object {
      "color": Array [
        1,
        2,
        3,
      ],
      "position": Array [
        1,
        1,
      ],
    },
  ],
  Array [
    Object {
      "color": Array [
        4,
        5,
        6,
      ],
      "position": Array [
        1,
        1,
      ],
    },
  ],
]
`;
